add link to a site offer solutions

--- a/README
+++ b/README
@@ -3,3 +3,6 @@ These are my solutions to the exercises in the book:
 Friedman, Daniel P., Mitchell Wand, and Christopher Thomas. Haynes. 
 Essentials of Programming Languages. 2nd Edition.
 Cambridge, MA: MIT, 2001. Print.
+
+## solutions found elsewhere
+<http://www.cs.indiana.edu/eopl/code/interps/>
